logs/querry_postgres_v1.5/insert_querry_postgres_table/2023-03-21T14:43:19.067280+00:00/3.log
[2023-03-21 14:51:34,516] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [queued]>
[2023-03-21 14:51:34,557] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [queued]>
[2023-03-21 14:51:34,559] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-21 14:51:34,559] {taskinstance.py:1239} INFO - Starting attempt 3 of 4
[2023-03-21 14:51:34,560] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-21 14:51:34,600] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): insert_querry_postgres_table> on 2023-03-21 14:43:19.067280+00:00
[2023-03-21 14:51:34,607] {standard_task_runner.py:52} INFO - Started process 17021 to run task
[2023-03-21 14:51:34,617] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'querry_postgres_v1.5', 'insert_querry_postgres_table', 'manual__2023-03-21T14:43:19.067280+00:00', '--job-id', '301', '--raw', '--subdir', 'DAGS_FOLDER/querry_posgresql.py', '--cfg-path', '/tmp/tmpozf_pxrf', '--error-file', '/tmp/tmpov6un_mt']
[2023-03-21 14:51:34,620] {standard_task_runner.py:77} INFO - Job 301: Subtask insert_querry_postgres_table
[2023-03-21 14:51:34,936] {logging_mixin.py:109} INFO - Running <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [running]> on host 0b4cdb459521
[2023-03-21 14:51:35,332] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=querry_postgres_v1.5
AIRFLOW_CTX_TASK_ID=insert_querry_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-03-21T14:43:19.067280+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-21T14:43:19.067280+00:00
[2023-03-21 14:51:35,410] {base.py:79} INFO - Using connection to: id: postgres_serving. Host: host.docker.internal, Port: 5432, Schema: serving, Login: ***, Password: ***, extra: {}
[2023-03-21 14:51:35,490] {dbapi.py:225} INFO - Running statement: 
            INSERT INTO serving_table_review (date, status_temp, status_preci, business_id, business_name, stars, date_values)
            SELECT date_values, status_temp, status_preci, business_id, business_name, stars, date_values
            FROM (None) AS xcom_result
    , parameters: None
[2023-03-21 14:51:35,496] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:             FROM (None) AS xcom_result
                              ^

[2023-03-21 14:51:35,590] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=querry_postgres_v1.5, task_id=insert_querry_postgres_table, execution_date=20230321T144319, start_date=20230321T145134, end_date=20230321T145135
[2023-03-21 14:51:35,632] {standard_task_runner.py:92} ERROR - Failed to execute job 301 for task insert_querry_postgres_table
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:             FROM (None) AS xcom_result
                              ^

[2023-03-21 14:51:35,674] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-21 14:51:35,868] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
